# flyingkitties

./: Cargo.toml
src/: administrator.rs  authorize.rs  layout.rs  main.rs
static/: blogr.css  login.js  sha256.js
static/css/: blogr.css
system/: README.md  flyingkitties.net.conf  flyingkitties.net.service
