[package]
name = "flyingkitties"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmlescape = "0.3.1"
lazy_static = "1.2"
regex = "1.1"
rmp-serde = "0.13.7"
rocket = "0.4"

serde_json = "1.0"
serde = {version="1.0", features=["derive"]}

time = "0.1"
titlecase = "0.10.0"


rocket-auth-login = { path = "../rocket-auth-login/" }
